--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,50 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #37434f;
+  color: white;
+}
+
+span {
+  display: inline-block;
+}
+
+.hoverwell {
+  /* padding: 30px 15px 15px; */
+  background-color: #485563;
+}
+
+.hoverwell:hover {
+  background-color: rgba(72, 85, 99, 0.517);
+  cursor: pointer;
+}
+
+.container {
+  padding-top: 10px;
+}
+
+.pointable {
+  cursor: pointer;
+}
+
+button {
+  color: #555;
+}
+
+[hidden] {
+  display: none !important;
+}
+
+.toast-success {
+  background-color: #51a351;
+}
+
+.toast-error {
+  background-color: #bd362f;
+}
+
+.toast-info {
+  background-color: #2f96b4;
+}
+
+.toast-warning {
+  background-color: #f86406;
+}
