--- a/src/app/user/login.component.html
+++ b/src/app/user/login.component.html
@@ -64,4 +64,6 @@
       Cancel
     </button>
   </form>
+  <br />
+  <div *ngIf="loginInvalid" class="alert alert-danger">Invalid Login Info</div>
 </div>
