--- a/src/app/user/profile.component.html
+++ b/src/app/user/profile.component.html
@@ -53,6 +53,15 @@
       <button class="btn btn-warning" type="button" (click)="cancel()">
         Cancel
       </button>
+
+      <button
+        type="button"
+        class="btn btn-warning"
+        style="float: right"
+        (click)="logout()"
+      >
+        Logout
+      </button>
     </form>
   </div>
 </div>
