--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -83,10 +83,15 @@
     </div>
 
     <div class="col-md-2">
+      <!-- (click) ~ EVENT BINDING -->
+      <!-- CALLS A METHOD FROM EVENT-DETAILS.COMPONENT.TS -->
+      <!-- WHEN CLICKED IT TOGGLES ADDMODE FROM FALSE TO TRUE -->
+      <!-- AND TRIGGERS CREATE SESSION -->
       <a (click)="addSession()">Add Session</a>
     </div>
   </div>
 
+  <!-- IT WILL SHOW SESSION LIST IF ADDMODE IS FALSE -->
   <session-list
     [eventId]="event.id"
     [sortBy]="sortBy"
@@ -94,6 +99,9 @@
     *ngIf="!addMode"
     [sessions]="event.sessions"
   ></session-list>
+  <!-- IT WILL SHOW SESSION LIST IF ADDMODE IS TRUE -->
+  <!-- (saveNewSession) and (cancelAddSession) ~ EVENT BINDING -->
+  <!-- CALLING METHODS SAVENEWSESSION AND CANCELADDSESSION FROM EVENT-DETAILS.COMPONENT.TS -->
   <create-session
     *ngIf="addMode"
     (saveNewSession)="saveNewSession($event)"
