--- a/src/app/events/event-details/upvote.component.scss
+++ b/src/app/events/event-details/upvote.component.scss
@@ -8,24 +8,24 @@
   border-radius: 21px;
 }
 
-.votingButton {
-  margin-left: -7px;
-  margin-top: 1px;
-  cursor: pointer;
-}
-
-.votingButton svg {
-  color: white;
-}
-
-.badge-inverse {
-  background-color: #fff;
-  color: #4e5d6c;
-}
-
 .votingCount {
   margin-left: -11px;
   margin-top: 1px;
   font-weight: bold;
   font-size: 14px;
+}
+
+.votingButton {
+  margin-left: -7px;
+  margin-top: 1px;
+  cursor: pointer;
+
+  & svg {
+    color: white;
+  }
+}
+
+.badge-inverse {
+  background-color: #fff;
+  color: #4e5d6c;
 }
