--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -1,12 +1,13 @@
 <div class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">ngEvents</a>
+      <a href="" class="navbar-brand">ngEvents</a>
     </div>
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
+          <!-- ROUTES -->
           <a
             [routerLink]="['/events']"
             routerLinkActive="active"
@@ -16,6 +17,7 @@
           </a>
         </li>
         <li>
+          <!-- ROUTES -->
           <a [routerLink]="['/events/new']" routerLinkActive="active">
             Create Event
           </a>
@@ -33,12 +35,14 @@
         </li>
       </ul>
 
+      <!-- (ngSubmit) ~ EVENT BINDING - CALLING SEARCHSESSIONS METHOD FROM NAVBAR.COMPONENT.TS -->
       <form
         id="searchForm"
         (ngSubmit)="searchSessions(searchTerm)"
         class="navbar-form navbar-right"
       >
         <div class="form-group">
+          <!-- TWO-WAY BINDING FOR SEARCHTERM -->
           <input
             [(ngModel)]="searchTerm"
             name="searchTerm"
@@ -54,9 +58,11 @@
       <div class="navbar-header navbar-right">
         <ul class="nav navbar-nav">
           <li>
+            <!-- SHOWS THIS TEXT IF USER IS NOT LOGGED IN -->
             <a *ngIf="!auth.isAuthenticated()" [routerLink]="['user/login']">
               Login
             </a>
+            <!-- SHOWS THIS TEXT IF USER IS LOGGED IN -->
             <a *ngIf="auth.isAuthenticated()" [routerLink]="['user/profile']">
               Welcome {{ auth.currentUser.firstName }}
             </a>
@@ -73,6 +79,7 @@
   title="Matching Sessions"
 >
   <div class="list-group">
+    <!-- ngFor ~ CREATING VIEW FOR EVERY FOUND SESSION -->
     <a
       class="list-group-item bg-transparent"
       *ngFor="let session of foundSessions"
