--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,23 +1,57 @@
-body {
-  background-color: #37434f;
-  color: white;
+* {
+  margin: 0;
+  padding: 0;
+  border: none;
+  box-sizing: border-box;
 }
+
+// html {
+//   font-size: 10px;
+// }
+
+body {
+  background-color: rgb(46, 46, 62);
+  color: #fff;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+// img {
+//   width: 100%;
+// }
 
 span {
   display: inline-block;
 }
 
-.hoverwell {
-  background-color: #485563;
-
-  &:hover {
-    background-color: rgba(72, 85, 99, 0.517);
-    cursor: pointer;
-  }
+.form-control:focus {
+  border-color: rgb(78, 184, 133);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
+    0 0 8px rgba(78, 184, 133, 1);
 }
 
-.container {
-  padding-top: 10px;
+.btn:focus {
+  border-color: rgb(78, 184, 133);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
+    0 0 8px rgba(78, 184, 133, 1);
+}
+
+.thumbnail {
+  // background-color: #485563;
+  background-color: #262634;
+  padding: 0 20px;
+
+  &:hover {
+    background-color: #485563;
+    cursor: pointer;
+  }
 }
 
 .pointable {
@@ -25,7 +59,7 @@ span {
 }
 
 button {
-  color: #555;
+  color: #0fae61;
 }
 
 [hidden] {
