--- a/src/styles.scss
+++ b/src/styles.scss
@@ -83,3 +83,12 @@ button {
     background-color: #f86406;
   }
 }
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
