--- a/src/app/events/vote/upvote.component.scss
+++ b/src/app/events/vote/upvote.component.scss
@@ -6,10 +6,14 @@
   height: 64px;
   padding-top: 7px;
   border-radius: 21px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .votingCount {
-  margin-left: -11px;
+  margin-left: -5.5px;
   margin-top: 1px;
   font-weight: bold;
   font-size: 14px;
@@ -27,5 +31,5 @@
 
 .badge-inverse {
   background-color: #fff;
-  color: #4e5d6c;
+  color: #262634;
 }
